# kodi.script.module.auth0-ciam-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  INTERVIEW_NOTES.md  Makefile  README.md  SPEC.md  addon.xml  pyproject.toml  symlink_addons.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
dev/script.auth0-ciam-client-test-harness/: addon.xml  main.py
kodi_addon_checker/: __init__.py  __main__.py  check_addon.py
kodi_addon_checker/addons/: Repository.py
script.module.auth0-ciam-client/: CHANGELOG.md  addon.xml
script.module.auth0-ciam-client/resources/: __init__.py
script.module.auth0-ciam-client/resources/lib/: README.md  __init__.py  kodi_logging.py
tests/: conftest.py  test_kodi_logging.py
